--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,5 +1,5 @@
 # blog authors
 authors:
-  - name: "DSA Chapter"
+  - name: "West Sound DSA"
     headline: # byline? 
     avatar: #"awesome_author.svg" # display_picture.jpg
