--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,10 +2,10 @@
 header:
   - title: "Statements"
     url: "/blog/"
-    description: "Link to DSA Chapter's Chapter Statements"
+    description: "Link to West Sound DSA's Chapter Statements"
   - title: "Get Involved"
     url: "/get-involved/"
-    description: "Check out what DSA Chapter is working on. Join DSA!"
+    description: "Check out what West Sound DSA is working on. Join DSA!"
   - title: "Events Calendar"
     url: "/calendar/"
     description: "Chapter Events Calendar"
