--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ facebook:
   publisher: # 1234
   # A Facebook user ID for domain insights linked to a personal account. I don't know what this means.
   admins: # 1234
-logo: /assets/images/WSDSALogoSmall.jpeg # PNG is SEO friendly
+logo: assets/images/WSDSALogo_NoText2.png # PNG is SEO friendly
 social:
   name: Chapter of Democratic Socialists of America
   links:
