--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,31 +1,31 @@
 facebook: &facebook
   label: "Facebook"
   icon: "fab fa-fw fa-facebook"
-  url: "https://www.facebook.com/dsachapter/"
-  username: dsachapter
+  url: "https://www.facebook.com/groups/1292432760847859"
+  # username: dsachapter
 
 twitter: &twitter
   label: "Twitter"
   icon: "fab fa-fw fa-twitter-square"
-  url: "https://twitter.com/dsachapter"
-  username: dsachapter
+  url: "https://x.com/westsounddsa"
+  username: westsounddsa
 
 instagram: &instagram
   label: "Instagram"
   icon: "fab fa-fw fa-instagram"
-  url: "https://www.instagram.com/dsachapter/"
-  username: dsachapter
+  url: "https://www.instagram.com/westsounddsa/"
+  username: westsounddsa
 
 github: &github
   label: "GitHub"
   icon: "fab fa-fw fa-github"
-  url: "https://github.com/dsachapter"
-  username: dsachapter
+  url: "https://github.com/westsounddsa"
+  username: WestSoundDSA
 
 email: &email
   label: "Email"
   icon: "fa fa-envelope"
-  url: "mailto:dsachapter@gmail.com"
+  url: "mailto:westsounddsa@gmail.com"
 
 # We use the above links in different combinations in 
 # different places in the site. Making lists in the manner
