Keep github.io url for now

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ bootswatch_theme: "united"
 
 # These settings are always used by Jekyll
 title: "West Sound Chapter of Democratic Socialists of America"
-url: https://westsound.dsachapters.org
+url: https://westsounddsa.github.io
 
 # These settings ase used by the jekyll-seo-tag plugin. The plugin adds
 # metadata tags for search engines and social networks to better index and
