--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -6,18 +6,18 @@ header:
   - title: "Events Calendar"
     url: "/calendar/"
     description: "West Sound DSA Events Calendar"
-  - title: "Contact"
-    url: "/contact/"
-    description: "West Sound DSA Contact"
-  - title: "Statements"
-    url: "/blog/"
-    description: "West Sound DSA's Chapter Statements"
   - title: "Zine"
     url: "/zine/"
     description: "West Sound DSA's Zine"
-  - title: "Community Resources"
+  - title: "Statements"
+    url: "/blog/"
+    description: "West Sound DSA's Chapter Statements"
+  - title: "Resources"
     url: "/resources/"
     description: "Check out our recommended local organizations"
+  - title: "Contact"
+    url: "/contact/"
+    description: "West Sound DSA Contact"
 
 
 # footer links
