--- a/_data/copy.yml
+++ b/_data/copy.yml
@@ -1,6 +1,6 @@
 global:
   about: "<b>We are the West Sound chapter of Democratic Socialists of America (DSA).</b> Democratic socialists believe both the economy and society should be run democratically to meet human needs, not to make profits 
-  for the wealthy. Throughout Kitsap County, our chapter fights for the good of the many, not the few. >
+  for the wealthy. Throughout Kitsap County, our chapter fights for the good of the many, not the few.
   Do you believe no one should be too poor to live? Do you believe everyone deserves healthcare and housing? Do you believe our lives and our planet are more important than profits? If you answered yes to any of these 
   questions, you just might be a socialist."
   welcome: "Welcome to West Sound DSA!"
